<resources>
<string name="pref_basic_mode">Vereinfachter Modus</string>
<string name="pref_basic_mode_on">Es werden nur grundlegende Optionen im Dashboard angeboten.</string>
<string name="pref_basic_mode_off">Alle verfügbaren Funktionen sind anwählbar und stehen zur Verfügung.</string>
<string name="pref_eyecandy">Augenschmauß</string>
<string name="pref_skin">Skin</string>
<string name="pref_skin_on">App wird mit eigenen Hintergrundbildern überzogen.</string>
<string name="pref_skin_off">Das Aussehen der App wird nicht beeinflusst.</string>
<string name="pref_skin_directory">Skin-Verzeichnis</string>
<string name="pref_skin_directory_summary">Das Verzeichnis, aus dem die Bilder zu laden sind.</string>
<string name="tatoeba">Beispielsätze</string>
<string name="pref_tatoeba">Aktiviere Satzsuche</string>
<string name="pref_tatoeba_on">Beispielsätze können im Training gesucht werden.</string>
<string name="pref_tatoeba_off">Der Knopf zum Suchen von Beispielsätzen fehlt im Training.</string>
<string name="pref_tatoeba_length">Anzahl der Sätze</string>
<string name="pref_tatoeba_length_summary">Wieviele Beispielsätze sollen gesucht werden?</string>
<string name="pref_tatoeba_show_translations">Übersetzungen anzeigen</string>
<string name="pref_tatoeba_show_translations_on">Zeige automatisch alle Übersetzungen der Beispielsätze an.</string>
<string name="pref_tatoeba_show_translations_off">Erst beim Öffnen eines Beispielsatzes wird nach dessen Übersetzung gesucht.</string>
<string name="pref_tatoeba_translations_vernicular">In Muttersprache</string>
<string name="pref_tatoeba_translations_vernicular_on">Zeige Übersetzungen der Beispiele in allen installierten Muttersprachen an.</string>
<string name="pref_tatoeba_translations_vernicular_off">Es wird keine in den Muttersprachen gegebenen Übersetzungen angezeigt.</string>
<string name="pref_tatoeba_translations_study">In Lernsprachen</string>
<string name="pref_tatoeba_translations_study_on">Zeige Übersetzungen der Beispiele in allen Sprachen an, die momentan gelernt werden.</string>
<string name="pref_tatoeba_translations_study_off">Übersetzungen in zu lernernde Sprachen werden ignoriert.</string>
<string name="pref_tatoeba_translations_all">In allen Sprachen</string>
<string name="pref_tatoeba_translations_all_on">Zeige Übersetzungen der Beispiele in allen Sprachen an.</string>
<string name="pref_tatoeba_translations_all_off">Zeige Übersetzungen nur in bestimmten Sprachen an.</string>
<string name="pref_tatoeba_translations">Beispielsätzeübersetzung</string>
    <string name="language_japanese">Japanisch</string>
    <string name="pref_update_title">Updates</string>
<string name="pref_use_default_sequence">Eine Kartei für alle Reihenfolgen</string>
<string name="pref_use_default_sequence_on">Es wird für jede Reihenfolge die gleiche Kartei verwendet.</string>
<string name="pref_use_default_sequence_off">Für jede Reihenfolge wird eine eigene Kartei verwaltet.</string>
<string name="pref_default_sequence">Wähle eine Standardkartei</string>
<string name="pref_default_sequence_summary">Legt fest, welche Kartei welcher Richtung als Standardkartei verwendet werden soll.</string>
        <string name="pref_veecheck_enabled">Updatebenachrichtigung</string>
        <string name="pref_veecheck_on">Es wird automatisch überprüft, ob eine neue Version verfügbar ist.</string>
        <string name="pref_veecheck_off">Es finden keine automatische Updatebenachrichtigungen statt.</string>
        <string name="pref_veecheck_period">Zeitintervall</string>
        <string name="pref_veecheck_period_summary">Einstellen der Zeitperiode, in der der Server kontaktiert wird.</string>
    <string name="pref_disable_acra">Fehler-Bericht abschalten</string>
    <string name="pref_acra_disabled">Es wird kein Fehlerbericht erstellt</string>
    <string name="pref_acra_enabled">Fehlerbericht eingeschaltet</string>
    <string name="pref_acra_syslog_enabled">Sende Syslog-Daten</string>
    <string name="pref_acra_syslog_disabled">Sende keine Syslog-Daten</string>
    <string name="pref_acra_syslog">Senden von Syslog</string>
    <string name="pref_acra_user_email">E-Mail Adresse</string>
    <string name="pref_acra_user_email_summary">Sie können Ihre Adresse zur Kontaktierung angeben.</string>
    <string name="pref_acra_alwaysaccept">Sende Fehlerbericht automatisch</string>
    <string name="pref_acra_alwaysaccept_enabled">Sende Fehlerbericht automatisch</string>
    <string name="pref_acra_alwaysaccept_disabled">Manuelle Auswahl zur Sendung des Fehlerberichts</string>
        	<string name="pref_buttonsize">Knopfgröße ändern</string>
                           	<string name="pref_buttonsize_summary">Stellt die Höhe der Schaltflächen für das Training ein.</string>
    <string name="pref_language">Sprache</string>
    <string name="pref_language_summary">Sprache, in der Sie antworten wollen</string>
    <string name="pref_reset_forgotten">Vergessene Karten zurücksetzen</string>
    <string name="pref_reset_forgotten_on">Jede neu vergessene und auf "Null" bewertete Karte wird komplett zurückgesetzt.</string>
    <string name="pref_reset_forgotten_off">Die Bewertung einer neu vergessene Karte wird zur Chronologie beigefügt.</string>
    <string name="pref_optimal_fontsize">Optimale Schriftgröße</string>
    <string name="pref_optimal_fontsize_summary">Größte zu verwendende Schriftgröße beim Training</string>
    <string name="pref_minimum_fontsize">Minimale Schriftgröße</string>
    <string name="pref_minimum_fontsize_summary">Kleinste zu verwendende Schriftgröße beim Training</string>
    <string name="pref_invert_colors">Invertiere Farben</string>
    <string name="pref_invert_colors_on">Weiß auf Schwarz</string>
    <string name="pref_invert_colors_off">Schwarz auf Weiß</string>
    <string name="pref_fullscreen">Vollbild</string>
    <string name="pref_fullscreen_on">Keine Statusleiste während des Trainings</string>
    <string name="pref_fullscreen_off">Statusleiste wird während des Trainings angezeigt</string>
    <string name="pref_fractal">Fraktalbild</string>
    <string name="pref_fractal_summary">Generiert einen animierten Fraktalhintergrund während des Trainings.</string>
    <string name="pref_orientation">Bildschirmausrichtung</string>
    <string name="pref_orientation_summary">Setzt die Bildschirmausrichtung fest.</string>
    <string name="pref_sequence">Reihenfolge</string>
    <string name="pref_sequence_summary">Bestimmt die Reihenfolge, in der eine Karte abgeprüft wird.</string>
    <string name="pref_second_question">Zweite Frage</string>
    <string name="pref_second_question_on">Es werden die ersten beiden Elemente der Karteikarte gezeigt, die dritte muss beantwortet werden.</string>
    <string name="pref_second_question_off">Es wird nur das erste Element der Karteikarte gezeigt, die beiden anderen müssen beantwortet werden.</string>
    <string name="pref_sorting">Sortierung</string>
    <string name="pref_sorting_summary">Sortiert vor dem Training die Karten nach einem bestimmten Schema.</string>
    <string name="pref_tts">Sprachsynthesizer</string>
    <string name="pref_tts_on">Vokabular wird bei Berührung vorgesprochen.</string>
    <string name="pref_tts_off">Sprachsynthesizer ist deaktiviert.</string>
    <string name="pref_tts_auto">Vorlesen</string>
    <string name="pref_tts_auto_on">Vokabular wird vorgesprochen.</string>
    <string name="pref_tts_auto_off">Automatisches Vorlesen deaktiviert.</string>
            <string name="pref_noun_article">Artikel für Nomen</string>
    <string name="pref_noun_article_summary">Anfügen von (un)bestimmte Artikel an Nomen.</string>
    <string name="pref_textedit_romaji">Texteingaben in Rōmaji</string>
    <string name="pref_textedit_romaji_on">Texteingaben werden von Rōmaji in Kana automatisch übersetzt.</string>
    <string name="pref_textedit_romaji_off">Keine Übersetzung von Texteingaben in Kana.</string>
    <string name="pref_verb_conjugation">Verbkonjugation</string>
    <string name="pref_verb_conjugation_summary">Konjugiert Verben in die angegebene Form.</string>
    <string name="pref_tourtips">Kurzhilfen</string>
    <string name="pref_tourtips_on">Kurzhilfen werden eingeblendet.</string>
    <string name="pref_tourtips_off">Kurzhilfen sind abgeschaltet.</string>
    <string name="pref_undolist_size">Größe der Undoliste</string>
    <string name="pref_undolist_size_summary">Je größer, desto mehr Schritte sind rückgängig machbar, desto mehr Speicher wird aber konsumiert.</string>
    <string name="pref_ssrf_days_lookup">Intervallsuchbreite</string>
    <string name="pref_ssrf_days_lookup_summary">Je größer, desto balancierter ist der Algorithmus, desto länger dauert aber das Auswerten einer Antwort.</string>
    <string name="pref_default_priority">Standard-Priorität</string>
    <string name="pref_default_priority_summary">Priorität, zu der alle neue Karten klassifiziert werden.</string>
    <string name="pref_database_location">Datenbank-Speicherort</string>
    <string name="pref_database_location_summary">Die Datenbank kann auf dem internen Speicher als auch auf einem externen Medium als Datei gespeichert werden.</string>
    <string name="pref_romaji">Verwende Rōmaji</string>
    <string name="pref_romaji_on">Wörter in Kana werden automatisch auch in Rōmaji dargestellt.</string>
    <string name="pref_romaji_off">In der Trainingsansicht wird kein Rōmaji verwendet.</string>
    <string name="menu_toselection">Zur Auswahl hinzufügen</string>
    <string name="menu_toselection_short">Zur Auswahl</string>
    <string name="menu_remove_from_filing">Entferne aus Kartei</string>
    <string name="menu_remove_from_filing_short">Löschen</string>
    <string name="menu_remove_from_selection">Entferne aus Auswahl</string>
    <string name="menu_remove_from_selection_short">Deselektiere</string>
    <string name="menu_lookup_reverso">Suche mit Reverso</string>
    <string name="menu_lookup_reverso_short">Reverso</string>
     <string name="menu_lookup_dictcc">Nachschlagen unter dict.cc</string>
    <string name="menu_lookup_dictcc_short">Dict.cc</string>
    <string name="menu_lookup_leo">Suche mit Leo</string>
    <string name="menu_lookup_leo_short">Leo</string>
    <string name="menu_lookup_colordict">Suche mit ColorDict</string>
    <string name="menu_lookup_colordict_short">ColorDict</string>
    <string name="menu_lookup_aarddict">Suche mit Aard Dictionary</string>
    <string name="menu_lookup_aarddict_short">Aarddict</string>
            <string name="menu_lookup_laconjugaison">Konjugiere mit La Conjugaison</string>
    <string name="menu_lookup_laconjugaison_short">La Conjugaison</string>
    <string name="menu_lookup_quickdic">Suche in Quickdic</string>
    <string name="menu_lookup_quickdic_short">Quickdic</string>
    <string name="menu_lookup_aedict">Suche in Aedict</string>
    <string name="menu_lookup_aedict_short">Aedict</string>
    <string name="menu_lookup_simeji">Suche über Simeji</string>
    <string name="menu_lookup_simeji_short">Simeji</string>
    <string name="menu_lookup_search">allgemeine Suche</string>
    <string name="menu_lookup_search_short">Suche</string>
    <string name="pref_server_url">Server URI</string>
<string name="pref_server_url_summary">Die HTTP-Adresse des Synchronisationsservers.</string>
<string name="pref_account">Veraltete Kontoführung (für Android &lt; 2.0)</string>
<string name="pref_account_username">Benutzername</string>
<string name="pref_account_username_summary">Der Name, unter dem Sie sich auf der Vocabtrain-Plattform registriert haben.</string>
<string name="pref_account_password">Passwort</string>
<string name="pref_account_password_summary">Das zu obigen Namen zugehörige Passwort</string>
<string name="pref_account_check">Konto überprüfen</string>
<string name="pref_account_check_summary">Erst nach erfolgreicher Authentifizierung ihres Kontos werden die Änderungen wirksam.</string>
</resources>