<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

		<CheckBoxPreference android:key="acra.disable"
			android:title="@string/pref_disable_acra" android:summaryOn="@string/pref_acra_disabled"
			android:summaryOff="@string/pref_acra_enabled" android:defaultValue="false" />

		<CheckBoxPreference android:key="acra.syslog.enable"
			android:summaryOn="@string/pref_acra_syslog_enabled"
			android:summaryOff="@string/pref_acra_syslog_disabled" android:title="@string/pref_acra_syslog"
			android:defaultValue="true" />

		<EditTextPreference android:key="acra.user.email"
		    android:inputType="textEmailAddress"
			android:title="@string/pref_acra_user_email" android:summary="@string/pref_acra_user_email_summary" />

		<CheckBoxPreference android:key="acra.alwaysaccept"
			android:title="@string/pref_acra_alwaysaccept" android:summaryOn="@string/pref_acra_alwaysaccept_enabled"
			android:summaryOff="@string/pref_acra_alwaysaccept_disabled"
			android:defaultValue="false" />

		
		
		
</PreferenceScreen>
